# wasmaxxing

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
compilers/: README.md
compilers/assemblyscript/: BUILD.bazel  defs.bzl  nodejs.BUILD  npm_package.BUILD
compilers/tinygo/: BUILD.bazel  defs.bzl  tinygo.BUILD
data/: README.md  catalog.json  overrides.json
docs/: architecture.md  compilers.md  interpreters.md  pipeline.md  roadmap.md  runtimes.md
examples/: README.md
examples/hello-assemblyscript-wasm/: BUILD.bazel  hello.ts
examples/hello-go-wasm/: BUILD.bazel  main.go
examples/hello-tinygo-wasm/: BUILD.bazel  main.go
interpreters/: README.md
interpreters/goja/: BUILD.bazel
interpreters/goja/cmd/goja/: BUILD.bazel  main.go
interpreters/goja/examples/: demo.js
interpreters/golua/: BUILD.bazel
interpreters/golua/cmd/golua/: BUILD.bazel  main.go  main_test.go
interpreters/golua/examples/: fib.lua
interpreters/wa/: BUILD.bazel
interpreters/wa/cmd/wa/: BUILD.bazel  main.go
interpreters/wa/examples/: hello.wa
patches/: BUILD.bazel  go-lua-wasm.patch
pipeline/catalog/: BUILD.bazel  catalog.go  catalog_test.go  overrides.go  overrides_test.go
pipeline/cmd/build-catalog/: BUILD.bazel  main.go
pipeline/cmd/enrich-catalog/: BUILD.bazel  main.go
pipeline/cmd/rank/: BUILD.bazel  main.go
pipeline/github/: BUILD.bazel  github.go
pipeline/maturity/: BUILD.bazel  maturity.go  maturity_test.go
pipeline/parse/: BUILD.bazel  parse.go  parse_test.go
runtimes/: BUILD.bazel  cli_run.bzl
runtimes/wamr/: BUILD.bazel  defs.bzl  wamr.BUILD
runtimes/wasmedge/: BUILD.bazel  defs.bzl  wasmedge.BUILD
runtimes/wasmer/: BUILD.bazel  defs.bzl  wasmer.BUILD
runtimes/wasmtime/: BUILD.bazel  defs.bzl  wasmtime.BUILD
runtimes/wazero/: BUILD.bazel  defs.bzl
runtimes/wazero/cmd/wazero-run/: BUILD.bazel  main.go
tools/: README.md
