"""wasmaxxing: a Bazel monorepo of WebAssembly compilers, interpreters, tools, and runtimes."""

module(
    name = "wasmaxxing",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "gazelle", version = "0.51.3")
bazel_dep(name = "platforms", version = "1.1.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.4")

# --- TinyGo toolchain (downloaded as a prebuilt release) -------------------
# TinyGo is fetched as a hermetic external repository. It is driven by the
# tinygo_wasm rule (see //compilers/tinygo) using rules_go's Go SDK, so no
# system Go install is required.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "tinygo_linux_amd64",
    urls = ["https://github.com/tinygo-org/tinygo/releases/download/v0.41.1/tinygo0.41.1.linux-amd64.tar.gz"],
    sha256 = "e156d1d93a376eef639a4143d13be07e8c463fb6cf2d7d447698ed4474d23e91",
    strip_prefix = "tinygo",
    build_file = "//compilers/tinygo:tinygo.BUILD",
)

# --- Mature wasm runtimes (prebuilt CLI releases, linux/amd64) --------------
# Each is fetched hermetically and wrapped by the cli_wasm_run rule (see
# //runtimes:cli_run.bzl) into a `bazel run` target, mirroring wazero_run.
# These are linux/amd64 binaries; cross-platform fetch is a future refinement.

# Wasmtime -- Bytecode Alliance, Rust. Single static-ish CLI binary.
http_archive(
    name = "wasmtime",
    urls = ["https://github.com/bytecodealliance/wasmtime/releases/download/v46.0.1/wasmtime-v46.0.1-x86_64-linux.tar.xz"],
    sha256 = "9ae0b17ea298bcc52277a8208d6ab7fae8e1a89579672f9d82f9d86c116edb62",
    strip_prefix = "wasmtime-v46.0.1-x86_64-linux",
    build_file = "//runtimes/wasmtime:wasmtime.BUILD",
)

# Wasmer -- wasmerio, Rust. CLI under bin/wasmer.
http_archive(
    name = "wasmer",
    urls = ["https://github.com/wasmerio/wasmer/releases/download/v7.1.0/wasmer-linux-amd64.tar.gz"],
    sha256 = "61a6ad0f972ee0afbb7907ab90f1120e15d2e219ec1ce08999f2864e0b8c340f",
    build_file = "//runtimes/wasmer:wasmer.BUILD",
)

# WasmEdge -- CNCF, C++. CLI under bin/wasmedge, shared lib under lib64/.
http_archive(
    name = "wasmedge",
    urls = ["https://github.com/WasmEdge/WasmEdge/releases/download/0.17.0/WasmEdge-0.17.0-manylinux_2_28_x86_64.tar.gz"],
    sha256 = "5d8165559c553eacc9b87db1799c2204e056db8609bedbf61eb29f8a21a42993",
    build_file = "//runtimes/wasmedge:wasmedge.BUILD",
)

# WAMR `iwasm` -- WebAssembly Micro Runtime, Bytecode Alliance, C.
http_archive(
    name = "wamr",
    urls = ["https://github.com/bytecodealliance/wasm-micro-runtime/releases/download/WAMR-2.4.4/iwasm-2.4.4-x86_64-ubuntu-22.04.tar.gz"],
    sha256 = "ec60ff8daed26319dfc4371843c56ac2dfadd20e2218cbbca97aecb8b390b7a8",
    build_file = "//runtimes/wamr:wamr.BUILD",
)

# --- AssemblyScript compiler toolchain (Node + npm packages) ----------------
# `asc` is distributed as JavaScript, so we fetch a prebuilt Node.js runtime to
# drive it, plus the asc bundle and its runtime deps (binaryen backend, long,
# and the WASI shim that turns AS modules into runnable WASI commands). The
# assemblyscript_wasm rule (see //compilers/assemblyscript) assembles these into
# a node_modules/ tree at build time. linux/x64 only, like the other prebuilts.

http_archive(
    name = "nodejs_linux_amd64",
    urls = ["https://nodejs.org/dist/v22.23.1/node-v22.23.1-linux-x64.tar.xz"],
    sha256 = "9749e988f437343b7fa832c69ded82a312e41a03116d766797ac14f6f9eee578",
    strip_prefix = "node-v22.23.1-linux-x64",
    build_file = "//compilers/assemblyscript:nodejs.BUILD",
)

http_archive(
    name = "npm_assemblyscript",
    urls = ["https://registry.npmjs.org/assemblyscript/-/assemblyscript-0.28.19.tgz"],
    sha256 = "39cb61ff891eff3f376e827dafcdedb47bf37bd3a59fd6bb185e1c32f6804cb1",
    strip_prefix = "package",
    build_file = "//compilers/assemblyscript:npm_package.BUILD",
)

http_archive(
    name = "npm_binaryen",
    urls = ["https://registry.npmjs.org/binaryen/-/binaryen-130.0.0-nightly.20260609.tgz"],
    sha256 = "014031d5b549ddac7b768729c78cbea676b1bbd1a2c2ed5cca9401d0ae34f8bc",
    strip_prefix = "package",
    build_file = "//compilers/assemblyscript:npm_package.BUILD",
)

http_archive(
    name = "npm_long",
    urls = ["https://registry.npmjs.org/long/-/long-5.2.4.tgz"],
    sha256 = "881b68e05deaef4ec36dd8e6157e001337c58a8bd9b14c96713cf2be70fdc76c",
    strip_prefix = "package",
    build_file = "//compilers/assemblyscript:npm_package.BUILD",
)

http_archive(
    name = "npm_assemblyscript_wasi_shim",
    urls = ["https://registry.npmjs.org/@assemblyscript/wasi-shim/-/wasi-shim-0.1.0.tgz"],
    sha256 = "e8b4410255e6f86cb96c2ce1d191fa9a6b45d274f0f506c4132e8075634ea005",
    strip_prefix = "package",
    build_file = "//compilers/assemblyscript:npm_package.BUILD",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Shopify/go-lua's os.clock() uses syscall.Getrusage, which is unavailable on
# the wasip1/js wasm targets. This patch restricts the unix implementation and
# adds a wall-clock fallback so the interpreter cross-compiles to wasm.
go_deps.module_override(
    patch_strip = 1,
    patches = ["//patches:go-lua-wasm.patch"],
    path = "github.com/Shopify/go-lua",
)
use_repo(
    go_deps,
    "com_github_dop251_goja",
    "com_github_shopify_go_lua",
    "com_github_tetratelabs_wazero",
    "org_wa_lang_wa",
)
