load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "catalog",
    srcs = ["catalog.go"],
    importpath = "github.com/dan-stowell/wasmaxxing/pipeline/catalog",
    visibility = ["//visibility:public"],
)

go_test(
    name = "catalog_test",
    srcs = ["catalog_test.go"],
    embed = [":catalog"],
)
