load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "build-catalog_lib",
    srcs = ["main.go"],
    importpath = "github.com/dan-stowell/wasmaxxing/pipeline/cmd/build-catalog",
    visibility = ["//visibility:private"],
    deps = [
        "//pipeline/catalog",
        "//pipeline/parse",
    ],
)

go_binary(
    name = "build-catalog",
    embed = [":build-catalog_lib"],
    visibility = ["//visibility:public"],
)
