load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "rank_lib",
    srcs = ["main.go"],
    importpath = "github.com/dan-stowell/wasmaxxing/pipeline/cmd/rank",
    visibility = ["//visibility:private"],
    deps = [
        "//pipeline/catalog",
        "//pipeline/maturity",
    ],
)

go_binary(
    name = "rank",
    embed = [":rank_lib"],
    visibility = ["//visibility:public"],
)
